fix(header): Add wrap

--- a/source/styles/components/header/base.scss
+++ b/source/styles/components/header/base.scss
@@ -4,7 +4,6 @@
 .header {
     display: flex;
     position: relative;
-    margin: auto;
     background-color: $color-1;
     color: $color-2;
     font-family: $font-1;
@@ -12,40 +11,46 @@
     line-height: 21.36px;
     text-transform: uppercase;
 
-    .logo {
-        margin-top: 27px;
-        margin-right: 317px;
-        margin-bottom: 24px;
+    .wrap {
+        display: flex;
+        width: 1168px;
+        margin: auto;
 
-        &::before {
-            content: '';
-            display: inline-block;
-            width: 27px;
-            height: 41px;
-            background: url(../../../images/header/logo.png);
-        }
-    }
+        .logo {
+            margin-top: 27px;
+            margin-right: 317px;
+            margin-bottom: 24px;
 
-    .menu {
-        position: absolute;
-        top: 40px;
-        right: 0;
-
-        a {
-            margin-right: 37px;
-            color: $color-2;
-            font-family: $font-2;
-            font-size: 14px;
-            line-height: 21.36px;
-            text-decoration: none;
+            &::before {
+                content: '';
+                display: inline-block;
+                width: 27px;
+                height: 41px;
+                background: url(../../../images/header/logo.png);
+            }
         }
 
-        a:last-child {
-            margin-right: 0;
-        }
-    }
+        .menu {
+            position: absolute;
+            top: 40px;
+            right: 0;
 
-    .phone-menu {
-        display: none;
+            a {
+                margin-right: 37px;
+                color: $color-2;
+                font-family: $font-2;
+                font-size: 14px;
+                line-height: 21.36px;
+                text-decoration: none;
+            }
+
+            a:last-child {
+                margin-right: 0;
+            }
+        }
+
+        .phone-menu {
+            display: none;
+        }
     }
 }
